--- a/index.html
+++ b/index.html
@@ -61,14 +61,91 @@
 
     <div class="child yellow">
         <p>I'm a child</p>
-        <div>
-
+        <div class="child grandchild purple">
+            <p>I'm a child but also a grandchild!</p>
     </div>
 
-        <div>
-
+        <div class="child grandchild orange">
+            <p>I'm a child but also a grandchild!</p>
         </div>
-
-        </div>
-
+    </div>
 </div>
+        <h5>Example 4: flex and align</h5>
+        <div class="parent example4">
+            <div class="row">
+                <div class="dark">
+
+                </div>
+                <div class="light">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="light">
+
+                </div>
+                <div class="dark">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="dark">
+
+            </div>
+            <div class="light">
+
+            </div>
+            </div>
+            <div class="row">
+                <div class="light">
+
+                </div>
+                <div class="dark">
+
+                </div>
+        </div>
+</div>
+                <h4>Example 5: space-around vs space-between</h4>
+<div class="parent example5">
+    <div class="yellowline">
+
+        </div>
+        <div class="bars">
+            <div class="bar">
+
+        </div>
+    <div class="bar">
+
+        </div>
+        <div class="bar">
+
+        </div>
+        <div class="bar">
+
+        </div>
+    </div>
+</div>
+</div>
+<h4>Example 6:putting it all together</h4>
+<div class="parent example6">
+    <div class="red child1">
+
+    </div>
+    <div class="child2">
+        <div class="darkblue">
+
+    </div>
+        <div class="grandchild1">
+            <div class="lightblue">
+
+    </div>
+            <div class="g-grandchild1">
+                <div class="lime">
+
+                </div>
+                <div class="lime">
+
+                </div>
+            </div>
+        </div>
+    </div>
